--- a/index.html
+++ b/index.html
@@ -21,14 +21,32 @@
 		<li>green</li>
 		<li>black</li>
 		<li>white</li>
+		<li>magenta</li>
+		<li>red</li>
+		<li>pink</li>
+		<li>periwinkle</li>
+		<li>turqois</li>
+		<li>teal</li>
 	</ul>
 	<ol>
-	<li><strong>good food</strong></li>
-	<li>greatfood</li>
-	<li>ok food</li>
-	<li>mid food</li>
+		<li><strong>good food</strong></li>
+		<li>Chick-fil-A</li>
+		<li>Nacho Supream</li>
+		<li>Chick-fil-A fries</li>
+		<li>Milkshake</li>
+		<li>Burger</li>
+		<li>Burrito</li>
 	</ol>
-	
+	<ol>
+		<li>Hottest Chips</li>
+		<li>Paqui one chip challenge 2022</li>
+		<li>Paqui one chip challenge 2021</li>
+		<li>Paqui one chip challenge 2020</li>
+		<li>Paqui one chip challenge 2019</li>
+		<li>Paqui one chip challenge 2018</li>
+		<li>Paqui one chip challenge 2017</li>
+		<li>Paqui one chip challenge 2016</li>
+	</ol>
 	<h2>links</h2>
 	<a href="https://www.amazon.com/">amazon</a>
 	<h3>links</h3>
